--- a/styles/main.scss
+++ b/styles/main.scss
@@ -55,3 +55,7 @@ button {
 	font-size: 40px;
 	text-transform: uppercase;
 }
+.hidden {
+	display: none;
+	transition: display 0.15s ease-in-out;
+}
