--- a/styles/main.scss
+++ b/styles/main.scss
@@ -59,3 +59,11 @@ button {
 	display: none;
 	transition: display 0.15s ease-in-out;
 }
+.rotated {
+	transform: rotate(180deg);
+	transition: transform 0.15s ease-in-out;
+}
+.reversed {
+	flex-direction: column;
+	transition: flex-direction 0.15s ease-in-out;
+}
