add create taskItem

--- a/styles/tasks/_tasks.scss
+++ b/styles/tasks/_tasks.scss
@@ -40,7 +40,7 @@
 			background: #180c69;
 			border: 0.8px solid #361bc3;
 			border-radius: 8px;
-			padding: 9px 12px;
+			padding: 9px 25px 9px 12px;
 			width: 400px;
 			height: 40px;
 			color: #fff;
