--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,9 +9,6 @@
 *::after {
 	box-sizing: border-box;
 }
-* {
-	// outline: 3px solid green
-}
 body {
 	display: flex;
 	justify-content: center;
@@ -20,6 +17,7 @@ body {
 	height: 100vh;
 	margin: 0;
 	padding: 0;
+	background-color: #272727;
 	background-image: url(../assets/background.svg);
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -64,7 +62,6 @@ button {
 	transition: transform 0.15s ease-in-out;
 }
 .reversed {
-	// flex-direction: column-reverse;
 	transition: flex-direction 0.15s ease-in-out;
 }
 .scenarios__add-button,
