--- a/src/styles/scenarios/_scenarios.scss
+++ b/src/styles/scenarios/_scenarios.scss
@@ -23,6 +23,7 @@
 		border-radius: 8px;
 		padding: 15px 15px 20px 15px;
 		background: rgba(16, 133, 84, 0.6);
+		border: 1px solid #0fa968;
 		gap: 7px;
 		max-height: 301px;
 		overflow-y: overlay;
