--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
 	padding: 0 200px;
 	backdrop-filter: blur(150px);
 	background: rgba(3, 48, 31, 0.01);
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
+	/* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25); */
 }
 .todo__content {
 	display: flex;
