--- a/css/index.css
+++ b/css/index.css
@@ -831,8 +831,8 @@ button {
 	background: #108554 !important;
 }
 .todo {
-	/* filter: drop-shadow(0 4px 5px rgba(0, 0, 0, 0.2509803922)); */
+	 filter: drop-shadow(0 4px 5px rgba(0, 0, 0, 0.25));
 }
 .todo__scenarios, .scenarios__items-list {
-	filter: drop-shadow(0 0 0 rgba(0, 0, 0, 0));
+	filter: drop-shadow(0 0 0 rgba(0, 0, 0, 0)) !important;
 }
